--- a/common/modules/navbar/_navbar.scss
+++ b/common/modules/navbar/_navbar.scss
@@ -6,6 +6,7 @@ header.navbar {
   background-color: $color-background;
   z-index: z(nav);
   transform: translateY(0px);
+  overflow: hidden;
   @include transition(top $animation, height $animation);
   @include box-shadow(0px $unit-minor / 4 $unit-minor / 2 0px lighten($color-darkTheme, 50));
   &.closed { top: -$height-header * 2; }
@@ -17,6 +18,7 @@ header.navbar {
     position: absolute;
     z-index: 50;
     padding-left: $offset;
+    overflow: hidden;
     a {
       color: $color-icon;
       padding: 0 $offset;
@@ -51,6 +53,7 @@ header.navbar {
       -moz-justify-content: flex-end;
       -ms-justify-content: flex-end;
       justify-content: flex-end;
+      overflow: hidden;
       &:hover, &:active, &:focus { color: $color-highlight; }
       @include inline-flex(false);
       @include transition(line-height $animation, width $animation, color $animation);
